Changes made between Gamera File Releases
=========================================

 - new plugin hough_lines in category geometry

 - handled errors in arguments of type PointVector more gracefully

 - workaround for crash of progress bar on OSX with wxPython 3.0

 - workaround for GetChildren in wxPython 3.0 returning deleted items

 - icons in gamera_gui now immediately shown without resize
   on OSX with wxpython 3.0

 - photometric tag of TIFF files no longer ignored for onebit TIFFs,
   which could lead to color inversion when reading TIFF images

 - fixed error in reading/writing 16bit greyscale PNG images

 - 16bit RGB PNG images now supported via downscaling
   (fixes Debian bug #785548)

 - reading of tiff images more error robust
   (fixes Debian bug #784795)

 - get() method corrected for Cc's with storage format RLE
   (fixes Debian bug #763440)


Version 3.4.2, Apr 23, 2015
----------------------------

 - updated zlib to version 1.2.8 (only used under Windows)

 - fixed classifier crash on Windows

 - fixed hang with wxpython 3.0 after quitting gamera_gui

 - fixed crash in min_max_location for FLOAT images

 - false_color now defaults to diverging colormap after Moreland, 2009


Version 3.4.1, May 28, 2014
----------------------------

 - ported to Windows again with MS VC and included compile instructions

 - new plugins:
    o kise_block_extraction in pagesegmentation
    o kernel_density, argmax, argmin in listutilities
    o soft_threshold in binarization

 - new features and feature improvements:
    o Fourier descriptors implemented based on EURASIP JASP 2013 paper
    o moments, zernike_moments, and diagonal_projection no longer
      produce division by zero error on empty images
    o bug fixed in zernike_moments that made the feature less useful

 - fixed a memory leak when image positions are given as sequence
   (Debian Bug report #747548 from 2014-05-09)

 - new option "iterations" for bbox_merging and significant speedup
